--- a/CLIENT/index.html
+++ b/CLIENT/index.html
@@ -26,13 +26,20 @@
     </header> -->
     <main>
         <section class="hero-section">
-            <div>
-                <h1><span>Crisp</span> Sites<br>With Some <span>Spice</span></h1>
+            <div class="hero-left">
+                <h1><span>Crisp</span> Sites</h1>
+                <h2>With Some <span>Spice</span></h2>
                 <h3>Professional web design and web<br>development in the Magic City.</h3>
+                <div class="hero-contact">
+                    <div>
+                        <a href="">Call Me</a>
+                        <a href="">+1 786 220 4628</a>
+                    </div>
+                </div>
                 <button class="primary-button" href="#contact-section">Start project!</button>
             </div>
-            <div>
-                <img src="./images/bensmithwebdesigner.png" alt="Ben Swordfire Miami Web Designer">
+            <div class="hero-right">
+                <img src="./images/bensmithwebdesigner.png" alt="Ben Swordfire Miami Web Designer" width="500px">
             </div>
         </section>
         <section class="icebreaker-section">
@@ -50,25 +57,26 @@
             </div>
         </section>
         <section id="offerSection" class="offer-section">
-            <div class="offer-text">
+            <div class="offer-left">
+                <h4>The Ultimate</h4>
                 <h2>Facelift</h2>
-                <h3>All-In-One Service Package To Impress Your Future Clients.</h3>
+                <h3>Professional web design and web<br>development in the Magic City.</h3>
                 <ul>
                     <li>Clean And Simple UI Design</li>
+                    <li>Well-written Content And Copy</li>
                     <li>Well-written Content And Copy</li>
                 </ul>
                 <button class="primary-button" href="#contact-section">Start project!</button>
             </div>
-            <div class="offer-card-wrapper right-col">
-                <div class="offer-card card1">
+            <div class="offer-right">
+                <div class="offer-card card-1">
                     <a class="secondary-button" href="">Premium Photography</a>
-
                 </div>
                 <div class="offer-card card-2">
-                    <a class="secondary-button" href="">Premium Photography</a>
+                    <a class="secondary-button" href="">Awesome UI Design</a>
                 </div>
                 <div class="offer-card card-3">
-                    <a href="">Premium Photography</a>
+                    <a class="secondary-button" href="">Web Development</a>
                 </div>
             </div>
         </section>
@@ -92,9 +100,7 @@
         </section>
         <section class="contact-section">
             <div>
-                <span>Meet</span>
-                <span class="name">Ben</span>
-                <img src="./images/benswordfire.png" alt="">
+<!--                 <img src="./images/benswordfire.png" alt=""> -->
                 <p style="max-width: 400px;">
                     Everything is falling apart, white space, contrast and colour schemes are terms your
                     website never acknowledged. As years go by, you realize that MAYBE, your neighbour’s
@@ -103,29 +109,76 @@
             </div>
             <div class="contact-section-form">
                 <form action="">
-                    <div class="form-name">
+                    <div class="form-group">
                         <div>
-                            <label for="">First Name</label>
+                            <label for="">Full Name</label>
                             <input type="text">
                         </div>
                         <div>
-                            <label for="">Last Name</label>
+                            <label for="">Business Name</label>
                             <input type="text">
                         </div>
                     </div>
-                    <div class="form-name">
+                    <div class="form-group">
                         <div>
-                            <label for="">First Name</label>
+                            <label for="">Phone Number</label>
                             <input type="text">
                         </div>
                         <div>
-                            <label for="">Last Name</label>
+                            <label for="">E-mail Address</label>
                             <input type="text">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div>
+                            <label for="">Choose Service:</label>
+                            <select name="" id="">
+                                <option value="">I need a facelift for my website.</option>
+                                <option value="">I need a brand new website.</option>
+                                <option value="">I</option>
+                            </select>
+                        </div>
+                        <div>
+                            <button class="primary-button"></button>
                         </div>
                     </div>
                 </form>
             </div>
         </section>
     </main>
+    <footer>
+        <section>
+            <div>
+                <img src="./images/benswordfire-favicon.png" alt="">
+                <h3>benswordfire.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua nosturd ase.</p>
+            </div>
+            <div>
+                <h3>Services</h3>
+                <ul>
+                    <li>Web Design</li>
+                    <li>Web Development</li>
+                    <li>UI and UX Design</li>
+                    <li>Graphic Design</li>
+                    <li>PPC Advertisement</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Say Hello...</h3>
+                <ul>
+                    <li>+1 786 220 4628</li>
+                    <li>benswordfire@gmail.com</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Company Stuff</h3>
+                <ul>
+                    <li>Privacy Policy</li>
+                    <li>Terms Of Service</li>
+                </ul>
+            </div>
+            <div><h3>Company Stuff</h3></div>
+        </section>
+    </footer>
 </body>
 </html>
