Hero section changed.

--- a/CLIENT/index.html
+++ b/CLIENT/index.html
@@ -11,7 +11,7 @@
     <script src="./script/script.js"></script>
 </head>
 <body>
-<!--     <header>
+    <header>
         <section class="header-section">
             <div><h3>benswordfire.</h3></div>
             <nav>
@@ -21,25 +21,17 @@
                     <li><a href="">My Story</a></li>
                 </ul>
             </nav>
-            <button class="primary-button" href="#contact-section">Start project!</button>
+            <button type="button" class="primary-button" href="#contact-section">Start project!</button>
         </section>
-    </header> -->
+    </header>
     <main>
         <section class="hero-section">
-            <div class="hero-left">
-                <h1><span>Crisp</span> Sites</h1>
-                <h2>With Some <span>Spice</span></h2>
-                <h3>Professional web design and web<br>development in the Magic City.</h3>
-                <div class="hero-contact">
-                    <div>
-                        <a href="">Call Me</a>
-                        <a href="">+1 786 220 4628</a>
-                    </div>
-                </div>
-                <button class="primary-button" href="#contact-section">Start project!</button>
-            </div>
-            <div class="hero-right">
-                <img src="./images/bensmithwebdesigner.png" alt="Ben Swordfire Miami Web Designer" width="500px">
+            <h1><span>Crisp</span> Sites</h1>
+            <h2>With Some <span>Spice</span></h2>
+            <h3>Professional web design and web<br>development in the Magic City.</h3>
+            <div class="hero-section-buttons">
+                <button type="button" class="primary-button" href="#contact-section">Book A Call</button>
+                <button type="button" class="primary-button" href="#contact-section">Start project!</button>
             </div>
         </section>
         <section class="icebreaker-section">
@@ -51,7 +43,7 @@
                     acknowledged. As years go by, you realize that MAYBE, your neighbour’s kid, Jimmy wasn’t the best choice
                     for this job. At least is was CHEAP...
                 </p>
-                <button class="primary-button" href="#contact-section">Start project!</button>
+                <button type="button" class="primary-button" href="#contact-section">Start project!</button>
             </div>
             <div>
             </div>
@@ -66,7 +58,7 @@
                     <li>Well-written Content And Copy</li>
                     <li>Well-written Content And Copy</li>
                 </ul>
-                <button class="primary-button" href="#contact-section">Start project!</button>
+                <button type="button" class="primary-button" href="#contact-section">Start project!</button>
             </div>
             <div class="offer-right">
                 <div class="offer-card card-1">
@@ -100,8 +92,8 @@
         </section>
         <section class="contact-section">
             <div>
-<!--                 <img src="./images/benswordfire.png" alt=""> -->
-                <p style="max-width: 400px;">
+                <img src="./images/benswordfire.png" alt="">
+                <p>
                     Everything is falling apart, white space, contrast and colour schemes are terms your
                     website never acknowledged. As years go by, you realize that MAYBE, your neighbour’s
                     kid, Jimmy wasn’t the best choice for this job. But at least is was CHEAP...
