--- a/CLIENT/index.html
+++ b/CLIENT/index.html
@@ -13,6 +13,15 @@
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WERZPL236M"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WERZPL236M');
+    </script>
 </head>
 <body>
     <header>
@@ -54,7 +63,7 @@
                     years go by, you realize that maybe your neighbor's kid, Jimmy,
                     wasn't the best choice for this job. At least he was CHEAP...
                 </p>
-                <button type="button" class="primary-button">No more Jimmy websites!</button>
+                <a href="#services-section" class="primary-button">No more Jimmy Websites!</a>
             </div>
             <div class="bridge-right">
                 <img src="images/rage-work.webp" alt="User gets angry due to poor designed website.">
@@ -66,12 +75,13 @@
                 <h2>Services</h2>
                 <h3>Would you buy from your company based on your website? If not, you know what to do.</h3>
                 <p>
-                    When it comes to web design, I strongly believe in keeping things
-                    simple and user-friendly. In my opinion, a clean user interface
-                    design with subtle animations, combined with high-quality and
-                    SEO-friendly content.
+                    Web design is not just about images and text. It's about creating a
+                    captivating user experience. A powerful design can take your brand
+                    to new heights and connect with your audience on a deeper level. It'
+                    s a masterpiece of creativity and innovation that sets your business
+                    apart in today's competitive digital world!
                 </p>
-                <button type="button" class="primary-button">No more Jimmy websites!</button>
+                <a href="#contact-section" class="primary-button">Start project!</a>
             </div>
             <div class="services-right">
                 <!-- Slider main container -->
@@ -94,7 +104,7 @@
                                     </ul>
                                 </div>
                                 <div class="slide-footer">
-                                    <button type="button" class="primary-button">I have a project.</button>
+                                    <a href="#contact-section" class="primary-button">I have a project.</a>
                                 </div>
                             </div>
                         </div>
@@ -105,7 +115,7 @@
                                     <h3>Web Development</h3>
                                     <p>
                                         What's the point of having the best ingredients for your
-                                        spaghetti when you lack Grandma's secret sauce? Web development
+                                        spaghetti when you lack Mom's secret sauce? Web development
                                         is your sauce that helps everything come into place.
                                     </p>
                                     <ul>
@@ -118,7 +128,7 @@
                                     </ul>
                                 </div>
                                 <div class="slide-footer">
-                                    <button type="button" class="primary-button">I have a project.</button>
+                                    <a href="#contact-section" class="primary-button">I have a project.</a>
                                 </div>
                             </div>
                         </div>
@@ -139,7 +149,7 @@
                                     </ul>
                                 </div>
                                 <div class="slide-footer">
-                                    <button type="button" class="primary-button">I have a project.</button>
+                                    <a href="#contact-section" class="primary-button">I have a project.</a>
                                 </div>
                             </div>
                         </div>
@@ -160,7 +170,7 @@
                                     </ul>
                                 </div>
                                 <div class="slide-footer">
-                                    <button type="button" class="primary-button">I have a project.</button>
+                                    <a href="#contact-section" class="primary-button">I have a project.</a>
                                 </div>
                             </div>
                         </div>
@@ -171,13 +181,16 @@
         </section>
         <section class="bridge-section hidden">
             <div class="bridge-left">
-                <h4>You wanna play the big game</h4>
+                <h4><span>Play</span> in the higher leauge!</h4>
                 <p>
-                    Some businesses are meant to conquer the market and some not. I only work
-                    with people who conquer, there is no time to f*ck around and joke with
-                    half-ass website that only give headache to your potential customers…
+                    A bad website is like showing up to a date with
+                    toilet paper stuck to your shoe. It's not going
+                    to leave a good impression on anyone. So, let's
+                    avoid giving your users a headache with a poorly
+                    designed website, and instead, invest in a website
+                    that's worth showing off!
                 </p>
-                <button type="button" class="primary-button">No more Jimmy websites!</button>
+                <a href="#offer-section" class="primary-button">Try Ultimate Facelift</a>
             </div>
             <div class="bridge-right">
                 <img src="images/legend-dance.webp" alt="Client dances after getting a beautiful website">
@@ -253,15 +266,23 @@
             </div>
             <div class="personal-right">
                 <h2><span>Meet </span>Ben</h2>
-                <h3>People suffer from useless and ugly websites, my goal is to </h3>
-                <p>
+                <h3>"I'm in the business of creating eyegasm causing interfaces and experiences."</h3>
+<!--                 <p>
                     When it comes to websites, I strongly believe in keeping things
                     simple and user-friendly. In my opinion, a clean user interface
                     design with subtle animations, combined with high-quality and
                     SEO-friendly content, can work wonders for a website. Trust me,
                     it's much more effective than any magic spell you might find in
                     The Half-Blood Prince's diary!
+                </p> -->
+                <p>
+                    When it comes to websites, I strongly believe in keeping things
+                    simple and user-friendly. A clean user interface with subtle
+                    animations, combined with high-quality and SEO-friendly content,
+                    can work wonders for a website. Trust me, it's much more effective
+                    than any magic spell you might find in The Half-Blood Prince's diary!
                 </p>
+                <a href="#contact-section" class="primary-button">Start project!</a>
             </div>
         </section>
         <section id="contact-section" class="contact-section">
@@ -347,17 +368,18 @@
                     <li>+1 786 220 4628</li>
                     <li>benswordfire@gmail.com</li>
                 </ul>
+            </div>
+            <div>
                 <h3>Company Stuff</h3>
                 <ul>
                     <li>Privacy Policy</li>
                     <li>Terms Of Service</li>
                 </ul>
             </div>
-            <div><h3>Company Stuff</h3></div>
         </section>
     </footer>
     <script defer src="./script/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script defer src="https://cdn.lordicon.com/ritcuqlt.js"></script>
+    <script async defer src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script async defer src="https://cdn.lordicon.com/ritcuqlt.js"></script>
 </body>
 </html>
