--- a/CLIENT/index.html
+++ b/CLIENT/index.html
@@ -10,17 +10,18 @@
 
     <title>Ben Swordfire - Miami Web Design And Web Development</title>
 
-    <link rel="stylesheet" href="./style/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
-    <!-- Google tag (gtag.js) -->
+    <link async rel="stylesheet" href="./style/style.css">
+    <link async rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,200;0,300;0,500;0,600;0,700;0,800;1,200;1,300;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WERZPL236M"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-WERZPL236M');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-WERZPL236M');
     </script>
 </head>
 <body>
@@ -66,7 +67,7 @@
                 <a href="#services-section" class="primary-button">No more Jimmy Websites!</a>
             </div>
             <div class="bridge-right">
-                <img src="images/rage-work.webp" alt="User gets angry due to poor designed website.">
+                <img src="images/rage-work.webp" alt="User gets angry due to poor designed website." width="629" height="470">
             </div>
         </section>
         <section id="services-section" class="services-section hidden">
@@ -193,25 +194,21 @@
                 <a href="#offer-section" class="primary-button">Try Ultimate Facelift</a>
             </div>
             <div class="bridge-right">
-                <img src="images/legend-dance.webp" alt="Client dances after getting a beautiful website">
+                <img src="images/legend-dance.webp" alt="Client dances after getting a beautiful website" width="465" height="352">
             </div>
         </section>
         <section id="offer-section" class="offer-section hidden">
             <div class="offer-left">
                 <span>The Ultimate</span>
                 <h2>Facelift</h2>
-                <h3>All-in-one business package to conquer the online space and rise above your competitors.</h3>
+                <h3>All-in-one package to conquer the online space and rise above your competitors.</h3>
                 <h4>Free Bonuses:</h4>
-                <ul>
+<!--                 <ul>
                     <li>1 Custom Marketing Strategy</li>
                     <li>1 Custom Page On My Website</li>
                     <li>2 Week Social Advertisement</li>
                     <li>3 Posts On Social Media</li>
-                </ul>
-<!--                <div class="offer-section-buttons">
-                    <button type="button" class="bonus-button">Unlock Bonuses!</button>
-                    <button type="button" class="primary-button">Start Project!</button>
-                </div> -->
+                </ul> -->
             </div>
             <div class="offer-right">
                 <div class="offer-card" >
@@ -223,7 +220,7 @@
                         stroke="25"
                         state="morph">
                     </lord-icon>
-                    <p>Premium Photography</p>
+                    <p>Photography</p>
                 </div>
                 <div class="offer-card">
                     <lord-icon
@@ -234,7 +231,7 @@
                         stroke="25"
                         state="morph">
                     </lord-icon>
-                    <p>Creative Copywirting</p>
+                    <p>Copywriting</p>
                 </div>
                 <div class="offer-card">
                     <lord-icon
@@ -245,7 +242,7 @@
                         stroke="25"
                         state="morph">
                     </lord-icon>
-                    <p>Awesome UI Design</p>
+                    <p>UI Design</p>
                 </div>
                 <div class="offer-card">
                     <lord-icon
@@ -256,7 +253,66 @@
                         stroke="25"
                         state="morph">
                     </lord-icon>
-                    <p>Crisp Development</p>
+                    <p>Web Development</p>
+                </div>
+            </div>
+        </section>
+        <section class="test-section">
+            <div class="test-left">
+                <div class="test-highlight">The Ultimate</div>
+                <div class="test-title">Facelift</div>
+                <div class="test-subtitle">All-in-one business package to conquer the online space and rise above your competitors.</div>
+                <ul class="test-list">
+                    <li class="test-list-item">1 Custom Marketing Strategy</li>
+                    <li class="test-list-item">1 Custom Marketing Strategy</li>
+                    <li class="test-list-item">1 Custom Marketing Strategy</li>
+                    <li class="test-list-item">1 Custom Marketing Strategy</li>
+                </ul>
+            </div>
+            <div class="test-right">
+                <div class="test-box">
+                    <lord-icon
+                    src="https://cdn.lordicon.com/anihkfxp.json"
+                    trigger="loop"
+                    delay="4000"
+                    colors="primary:#ff2775,secondary:#00e9d4,tertiary:#00e9d4"
+                    stroke="25"
+                    state="morph">
+                </lord-icon>
+                    Photography
+                </div>
+                <div class="test-box">
+                    <lord-icon
+                    src="https://cdn.lordicon.com/anihkfxp.json"
+                    trigger="loop"
+                    delay="4000"
+                    colors="primary:#ff2775,secondary:#00e9d4,tertiary:#00e9d4"
+                    stroke="25"
+                    state="morph">
+                </lord-icon>
+                    Web Development
+                </div>
+                <div class="test-box">
+                    <lord-icon
+                    src="https://cdn.lordicon.com/anihkfxp.json"
+                    trigger="loop"
+                    delay="4000"
+                    colors="primary:#ff2775,secondary:#00e9d4,tertiary:#00e9d4"
+                    stroke="25"
+                    state="morph">
+                </lord-icon>
+                    Copywriting
+                </div>
+                <div class="test-box">
+                    <lord-icon
+                    src="https://cdn.lordicon.com/anihkfxp.json"
+                    trigger="loop"
+                    delay="4000"
+                    colors="primary:#ff2775,secondary:#00e9d4,tertiary:#00e9d4"
+                    stroke="25"
+                    state="morph">
+                </lord-icon>
+                    UI design
                 </div>
             </div>
         </section>
@@ -323,7 +379,7 @@
                     </div>
                     <div class="form-group">
                         <div>
-                            <label for="">Choose Service:</label>
+                            <label for="service">Choose Service:</label>
                             <select name="service">
                                 <option value="The Ultimate Facelift">The Ultimate Facelift + Free Bonuses</option>
                                 <option value="Web Design">Web Design</option>
@@ -335,7 +391,7 @@
                     </div>
                     <div class="form-group">
                         <div>
-                            <label for="">Message</label>
+                            <label for="message">Message</label>
                             <textarea name="message" cols="30" rows="5"></textarea>
                         </div>
                     </div>
@@ -378,7 +434,7 @@
             </div>
         </section>
     </footer>
-    <script defer src="./script/script.js"></script>
+    <script async defer src="./script/script.js"></script>
     <script async defer src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script async defer src="https://cdn.lordicon.com/ritcuqlt.js"></script>
 </body>
