--- a/CLIENT/index.html
+++ b/CLIENT/index.html
@@ -10,17 +10,17 @@
 
     <title>Ben Swordfire - Miami Web Design And Web Development</title>
 
-    <link rel="stylesheet" href="./style/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
+    <link async rel="stylesheet" href="style/style.css">
+    <link async rel="stylesheet" href="style/swiper.bundle.min.css">
+    <link async rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WERZPL236M"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-WERZPL236M');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-WERZPL236M');
     </script>
 </head>
 <body>
@@ -66,7 +66,7 @@
                 <a href="#services-section" class="primary-button">No more Jimmy Websites!</a>
             </div>
             <div class="bridge-right">
-                <img src="images/rage-work.webp" alt="User gets angry due to poor designed website.">
+                <img src="images/rage-work.webp" alt="User gets angry due to poor designed website." width="629" height="470">
             </div>
         </section>
         <section id="services-section" class="services-section hidden">
@@ -193,7 +193,7 @@
                 <a href="#offer-section" class="primary-button">Try Ultimate Facelift</a>
             </div>
             <div class="bridge-right">
-                <img src="images/legend-dance.webp" alt="Client dances after getting a beautiful website">
+                <img src="images/legend-dance.webp" alt="Client dances after getting a beautiful website" width="465" height="352">
             </div>
         </section>
         <section id="offer-section" class="offer-section hidden">
@@ -267,14 +267,6 @@
             <div class="personal-right">
                 <h2><span>Meet </span>Ben</h2>
                 <h3>"I'm in the business of creating eyegasm causing interfaces and experiences."</h3>
-<!--                 <p>
-                    When it comes to websites, I strongly believe in keeping things
-                    simple and user-friendly. In my opinion, a clean user interface
-                    design with subtle animations, combined with high-quality and
-                    SEO-friendly content, can work wonders for a website. Trust me,
-                    it's much more effective than any magic spell you might find in
-                    The Half-Blood Prince's diary!
-                </p> -->
                 <p>
                     When it comes to websites, I strongly believe in keeping things
                     simple and user-friendly. A clean user interface with subtle
@@ -323,7 +315,7 @@
                     </div>
                     <div class="form-group">
                         <div>
-                            <label for="">Choose Service:</label>
+                            <label for="service">Choose Service:</label>
                             <select name="service">
                                 <option value="The Ultimate Facelift">The Ultimate Facelift + Free Bonuses</option>
                                 <option value="Web Design">Web Design</option>
@@ -335,7 +327,7 @@
                     </div>
                     <div class="form-group">
                         <div>
-                            <label for="">Message</label>
+                            <label for="message">Message</label>
                             <textarea name="message" cols="30" rows="5"></textarea>
                         </div>
                     </div>
@@ -346,6 +338,14 @@
             </div>
         </section>
     </main>
+    <div>
+        <iframe title="" id="video" controls autoplay loop muted src="./images/wildlife.mp4">
+        </iframe>
+    </div>
+    <div style="width:200px">
+        <button id="playToggle" type="button" class="submit-button">Play/Pause</button>
+        <button id="muteToggle" type="button" class="submit-button">Mute/Unmute</button>
+    </div>
     <footer>
         <section>
             <div>
@@ -378,7 +378,7 @@
             </div>
         </section>
     </footer>
-    <script defer src="./script/script.js"></script>
+    <script async defer src="./script/script.js"></script>
     <script async defer src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script async defer src="https://cdn.lordicon.com/ritcuqlt.js"></script>
 </body>
